<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="version_name">1.4</string> <!-- Remember to increment the version code in the manifest when updating this -->
    <string name="analytics_token"></string> <!-- Not required for now -->
    <string name="analytics_uri"></string> <!-- Not required for now -->
    
    <string name="app_name">Next Bus Versailles</string>
    <string name="home_activity_title">Next Bus Versailles</string>
    <string name="about">About</string>
    <string name="about_app_title">About</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="update">Update Bus Timings</string>
    <string name="feedbackbutton">Feedback</string>
    <string name="favoritebutton">Favorites</string>
    <string name="phebusinfobutton">Phebus Info</string>
    <string name="addtofavbutton">Add this stop</string>
    <string name="line_info">line</string>
    <string name="stop_name">stop</string>
    <string name="stop_spinner_prompt">Pick a Stop</string>
    <string name="line_spinner_prompt">Pick a Bus Line</string>
    <string name="bus_times"></string>
    <string name="dev_team_title">Developer Team</string>
    <string name="dev_names">Emil Andriescu\nAnimesh Pathak</string>
    <string name="localization_title">Localization</string>
    <string name="localization_team">Benjamin Billet\nMoussa Tari Bachir</string>
    <string name="artwork_title">Artwork</string>
    <string name="artwork_team">Kylie Mac</string>
    <string name="license_title">License</string>
    <string name="license">GNU General Public License version 3</string>
    <string name="open_source_title">Open Source</string>
    <string name="source_url">http://code.google.com/p/nextbus-versailles/</string>
    <string name="bus_text_direction">Direction</string>
    <string name="bus_text_theoretical">Theoretical</string>
    <string name="bus_text_approaching">Bus approaching</string>
    <string name="bus_text_unavailable">Info currently unavailable</string>
    <string name="bus_text_last">Last bus</string>
    <string name="last_updated_at">Last updated</string>
    <string name="server_said">The server said</string>
    <string name="getting_latest_times">Getting latest bus timings, please wait</string>
    <string name="select_email_app">Select your preferred email application.</string>
    <string name="email_hello">Hello,\n</string>
    <string name="wildcard_bus_line">All lines</string>
    <string name="versioninfo_asset">versioninfo_en.txt</string>
    <string name="versioninfo_title">Version Information</string>
</resources>
