<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="Version" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_name" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_team_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_names" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artwork_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/artwork_team" />
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localization_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />



    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/localization_team" />
    
    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/license" />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_source_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_marginLeft="10dp"
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:text="@string/source_url" />

</LinearLayout>